# Frontend/src/openapi/openapi.json
@@ -1,142 +1,2 @@
-{
-    "openapi": "3.0.1",
-    "info": {
-      "title": "OpenAPI definition",
-      "version": "v0"
-    },
-    "servers": [
-      {
-        "url": "http://localhost:8080/Growthnest",
-        "description": "Generated server URL"
-      }
-    ],
-    "paths": {
-      "/auth/register": {
-        "post": {
-          "tags": ["Authentication"],
-          "operationId": "register",
-          "requestBody": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RegistrationRequest"
-                }
-              }
-            },
-            "required": true
-          },
-          "responses": {
-            "202": {
-              "description": "Accepted",
-              "content": {
-                "*/*": {
-                  "schema": {
-                    "type": "object"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "/auth/authenticate": {
-        "post": {
-          "tags": ["Authentication"],
-          "operationId": "authenticate",
-          "requestBody": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AuthenticationRequest"
-                }
-              }
-            },
-            "required": true
-          },
-          "responses": {
-            "202": {
-              "description": "Accepted",
-              "content": {
-                "*/*": {
-                  "schema": {
-                    "$ref": "#/components/schemas/AuthenticationResponse"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "/auth/activate-account": {
-        "get": {
-          "tags": ["Authentication"],
-          "operationId": "confirm",
-          "parameters": [
-            {
-              "name": "token",
-              "in": "query",
-              "required": true,
-              "schema": {
-                "type": "string"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "OK"
-            }
-          }
-        }
-      }
-    },
-    "components": {
-      "schemas": {
-        "RegistrationRequest": {
-          "required": ["email", "firstName", "image", "lastname", "password"],
-          "type": "object",
-          "properties": {
-            "firstName": {
-              "type": "string"
-            },
-            "lastname": {
-              "type": "string"
-            },
-            "email": {
-              "type": "string"
-            },
-            "password": {
-              "type": "string",
-              "minLength": 8,
-              "maxLength": 2147483647
-            },
-            "image": {
-              "type": "string"
-            }
-          }
-        },
-        "AuthenticationRequest": {
-          "required": ["email", "password"],
-          "type": "object",
-          "properties": {
-            "email": {
-              "type": "string"
-            },
-            "password": {
-              "type": "string",
-              "minLength": 8,
-              "maxLength": 2147483647
-            }
-          }
-        },
-        "AuthenticationResponse": {
-          "type": "object",
-          "properties": {
-            "token": {
-              "type": "string"
-            }
-          }
-        }
-      }
-    }
-  }
-  
+{"openapi":"3.0.1","info":{"title":"OpenAPI definition","version":"v0"},"servers":[{"url":"http://localhost:8080/Growthnest","description":"Generated server url"}],"paths":{"/auth/register":{"post":{"tags":["Authentication"],"operationId":"register","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/RegistrationRequest"}}},"required":true},"responses":{"202":{"description":"Accepted","content":{"*/*":{"schema":{"type":"object"}}}}}}},"/auth/authenticate":{"post":{"tags":["Authentication"],"operationId":"authenticate","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/AuthenticationRequest"}}},"required":true},"responses":{"202":{"description":"Accepted","content":{"*/*":{"schema":{"$ref":"#/components/schemas/AuthenticationResponse"}}}}}}},"/users":{"get":{"tags":["User Management"],"operationId":"getAllUsers","responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"type":"array","items":{"$ref":"#/components/schemas/User"}}}}}}}},"/auth/activate-account":{"get":{"tags":["Authentication"],"operationId":"confirm","parameters":[{"name":"token","in":"query","required":true,"schema":{"type":"string"}}],"responses":{"200":{"description":"OK"}}}}},"components":{"schemas":{"RegistrationRequest":{"required":["email","firstName","password"],"type":"object","properties":{"firstName":{"type":"string"},"lastname":{"type":"string"},"email":{"type":"string"},"password":{"type":"string"},"dateOfBirth":{"type":"string","format":"date"},"image":{"type":"string"}}},"AuthenticationRequest":{"required":["email","password"],"type":"object","properties":{"email":{"type":"string"},"password":{"type":"string"}}},"AuthenticationResponse":{"type":"object","properties":{"token":{"type":"string"}}},"GrantedAuthority":{"type":"object","properties":{"authority":{"type":"string"}}},"Role":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string","enum":["ADMIN","USER","BuisnessOwner","MarketingAgent"]}}},"User":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"firstname":{"type":"string"},"lastname":{"type":"string"},"image":{"type":"string"},"email":{"type":"string"},"password":{"type":"string"},"accountLocked":{"type":"boolean"},"enabled":{"type":"boolean"},"createdDate":{"type":"string","format":"date-time"},"lastModifiedDate":{"type":"string","format":"date-time"},"role":{"$ref":"#/components/schemas/Role"},"name":{"type":"string"},"username":{"type":"string"},"authorities":{"type":"array","items":{"$ref":"#/components/schemas/GrantedAuthority"}},"accountNonLocked":{"type":"boolean"},"accountNonExpired":{"type":"boolean"},"credentialsNonExpired":{"type":"boolean"}}}}}}
+
